package Model;

public enum Nivel {
	PRINCIPIANTE,
	INTERMEDIO,
	AVANZADO
}
