package main.java.Adapter;

public interface INotificacionAdapter {
    void enviar(String destino, String mensaje);
}
