@startuml Sistema de Partidos TPO ADOO

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor white
skinparam handwritten false
skinparam monochrome false
skinparam packagePadding 10
skinparam defaultFontSize 12
skinparam defaultFontName Arial
skinparam classBackgroundColor #FEFECE
skinparam packageBackgroundColor #FAFAFA
skinparam noteBackgroundColor #EFF5FB
skinparam noteBorderColor #A9D0F5
skinparam ArrowColor #454645
skinparam stereotypeCBackgroundColor #ADD1B2
skinparam stereotypeCBorderColor #A9A9A9

left to right direction
hide empty members

package "Model" #EEFFEE {
  class Partido {
  // Variables
    - id: int
    - deporte: Deporte
    - cantidadJugadoresRequeridos: int
    - duracion: int
    - nivelMaximo: Nivel
    - nivelMinimo: Nivel
    - ubicacion: Ubicacion
    - estado: EstadoPartido
    - jugadoresAnotados: List<Usuario>
    - estrategiaEmparejamiento: EstrategiaEmparejamiento
    - observadores: List<Notificador>
    - organizador: Usuario
    - fechaHora: LocalDateTime
    - minPartidosRequeridos: int

    // Métodos
xº    + Partido(ubicacion: Ubicacion, deporte: Deporte, cantidadJugadoresRequeridos: int, duracion: int, organizador: Usuario, estrategia: EstrategiaEmparejamiento, fechaHora: LocalDateTime)
    + agregarJugador(jugador: Usuario): void
    + eliminarJugador(jugador: Usuario): void
    + cambiarEstado(nuevoEstado: EstadoPartido): void
    + cancelarPartido(): void
    + notificar(): void
    + verificarEstadoActual(): void
    + editarPartido(ubicacion: Ubicacion, duracion: int, fechaHora: LocalDateTime): void
    + confirmarJugadores(): void
    + agregarObservador(observador: Notificador): void
    + eliminarObservador(observador: Notificador): void
    + toDTO(): PartidoDTO
    + getId(): int
    + setId(id: int): void
    + getDeporte(): Deporte
    + getUbicacion(): Ubicacion
    + getEstado(): EstadoPartido
    + getJugadoresAnotados(): List<Usuario>
    + getCantidadJugadoresRequeridos(): int
    + getNivelMinimo(): Nivel
    + getNivelMaximo(): Nivel
    + getFechaHora(): LocalDateTime
    + getEstrategiaEmparejamiento(): EstrategiaEmparejamiento
  }

  class Usuario {
    - nombreUsuario: String
    - correo: String
    - password: String
    - deportes: List<UsuarioDeporte>
    - ubicacion: Ubicacion
    - partidos: List<Partido>
    - sesion: boolean
    - cantidadPartidosJugados: int

    + Usuario(nombreUsuario: String, correo: String, password: String)
    + consultarHistorialPartidos(): List<PartidoDTO>
    + buscarPartido(ubicacionDeseada: Ubicacion): PartidoDTO
    + login(nombreUsuario: String, password: String): UsuarioDTO
    + logout(): UsuarioDTO
    + toDTO(): UsuarioDTO
    + getNombreUsuario(): String
    + getCorreo(): String
    + getPassword(): String
    + setPassword(password: String): void
    + getDeportes(): List<UsuarioDeporte>
    + setDeportes(deportes: List<UsuarioDeporte>): void
    + getUbicacion(): Ubicacion
    + setUbicacion(ubicacion: Ubicacion): void
    + getPartidos(): List<Partido>
    + setPartidos(partidos: List<Partido>): void
    + isSesion(): boolean
    + setSesion(sesion: boolean): void
    + getCantidadPartidosJugados(): int
    + setCantidadPartidosJugados(cantidad: int): void
    - convertirUsuarioDeporteADTO(ud: UsuarioDeporte): UsuarioDeporteDTO
  }

  class Ubicacion {
    - ciudad: String
    - direccion: String
    - latitud: double
    - longitud: double

    + Ubicacion(ciudad: String, direccion: String, latitud: double, longitud: double)
    + calcularDistancia(otra: Ubicacion): double
    + toDTO(): UbicacionDTO
    + getCiudad(): String
    + getDireccion(): String
    + getLatitud(): double
    + getLongitud(): double
  }

  class Deporte {
    - nombre: String
    - jugadoresMaximos: int
    - jugadoresMinimos: int

    + Deporte(nombre: String, jugadoresMinimos: int, jugadoresMaximos: int)
    + getNombre(): String
    + getJugadoresMaximos(): int
    + getJugadoresMinimos(): int
  }

  class UsuarioDeporte {
    - nivel: Nivel
    - deporte: Deporte
    - jugador: Usuario

    + getNivel(): Nivel
    + setNivel(nivel: Nivel): void
    + getDeporte(): Deporte
    + setDeporte(deporte: Deporte): void
    + getJugador(): Usuario
    + setJugador(jugador: Usuario): void
  }

  enum Nivel {
    PRINCIPIANTE
    INTERMEDIO
    AVANZADO
  }

  class Notificador {
    - adapter: INotificacionAdapter

    + Notificador(adapter: INotificacionAdapter)
    + notificar(usuario: Usuario, mensaje: String): void
  }

  class Firebase {
    + enviarNotificacion(usuario: Usuario): void
    + enviarPush(destino: String, mensaje: String): void
  }

  class Mail {
    + enviarCorreo(correo: String, contenido: String): void
  }
}

package "Controllers" #F0F8FF {
  class PartidoController {
    - partidos: List<Partido>
    - notificadores: List<Notificador>
    - deportes: Map<String, Deporte>

    + PartidoController(partidos: List<Partido>, notificadores: List<Notificador>, deportes: Map<String, Deporte>)
    + crearPartido(nombreDeporte: String, cantidadJugadores: int, duracion: int, ubicacionDTO: UbicacionDTO, organizador: Usuario, estrategia: String, fechaHora: LocalDateTime): PartidoDTO
    + buscarPartidosPorUbicacion(ubicacionDTO: UbicacionDTO, distanciaMaxima: double): List<PartidoDTO>
    + agregarJugadorAPartido(idPartido: String, jugador: Usuario): PartidoDTO
    + eliminarJugadorDePartido(idPartido: String, jugador: Usuario): PartidoDTO
    + confirmarPartido(idPartido: String): PartidoDTO
    + cancelarPartido(idPartido: String): PartidoDTO
    + obtenerTodosLosPartidos(): List<PartidoDTO>
    + verificarEstadosPartidos(): void
    + agregarNotificador(notificador: Notificador): void
    - buscarDeporte(nombreDeporte: String): Deporte
    - buscarPartido(idPartido: String): Partido
    - generateUniqueId(): int
    + getPartidos(): List<Partido>
    + getNotificadores(): List<Notificador>
    + getDeportes(): Map<String, Deporte>
  }

  class UsuarioController {
    - usuario: Usuario
    - usuarios: List<Usuario>

    + UsuarioController(usuarios: List<Usuario>)
    + crearUsuario(usuarioDTO: UsuarioDTO): UsuarioDTO
    + iniciarSesion(nombre: String, contrasena: String): UsuarioDTO
    + cerrarSesion(): UsuarioDTO
    + consultarHistorial(): List<PartidoDTO>
    + buscarPartidosCercanos(ubicacionDTO: UbicacionDTO, distanciaMaxima: double): List<PartidoDTO>
    + actualizarPerfil(datosActualizados: UsuarioDTO): UsuarioDTO
    + getUsuarioActual(): UsuarioDTO
    + agregarUsuarioAlSistema(usuario: Usuario): void
    + getUsuario(): Usuario
    + setUsuario(usuario: Usuario): void
    + getUsuarios(): List<Usuario>
  }
}

package "State" #FFEEEE {
  interface EstadoPartido {
    + agregarJugador(partido: Partido): void
    + eliminarJugador(partido: Partido): void
    + confirmarJugador(partido: Partido): void
    + cancelarPartido(): void
    + getNombreEstado(): String
  }

  together {
    class EstadoBuscandoJugadores implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
    }

    class EstadoPartidoArmado implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
      - jugadorConfirmado(jugador: Usuario): boolean
    }

    class EstadoPartidoConfirmado implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
      + verificarInicio(partido: Partido, ahora: LocalDateTime): void
    }

    class EstadoPartidoEnJuego implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
      + finalizarPartido(partido: Partido): void
    }

    class EstadoPartidoFinalizado implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
    }

    class EstadoPartidoCancelado implements EstadoPartido {
      + agregarJugador(partido: Partido): void
      + eliminarJugador(partido: Partido): void
      + confirmarJugador(partido: Partido): void
      + cancelarPartido(): void
    }
  }
}

package "Strategy" #EEEEFF {
  interface EstrategiaEmparejamiento {
    + esCompatible(jugador: Usuario, partido: Partido): boolean
  }

  together {
    class EstrategiaEmparejamientoNivel implements EstrategiaEmparejamiento {
      + esCompatible(jugador: Usuario, partido: Partido): boolean
    }

    class EstrategiaEmparejamientoHistorial implements EstrategiaEmparejamiento {
      + esCompatible(jugador: Usuario, partido: Partido): boolean
    }

    class EstrategiaEmparejamientoUbicacion implements EstrategiaEmparejamiento {
      - UMBRAL_KM: double = 10.0
      + esCompatible(jugador: Usuario, partido: Partido): boolean
    }
  }
}

package "Adapter" #FFFEE0 {
  interface INotificacionAdapter {
    + enviar(destino: String, mensaje: String): void
  }

  together {
    class FirebaseAdapter implements INotificacionAdapter {
      - firebase: Firebase
      + FirebaseAdapter(firebase: Firebase)
      + enviar(destino: String, mensaje: String): void
    }

    class MailAdapter implements INotificacionAdapter {
      - mailer: Mail
      + MailAdapter(mailer: Mail)
      + enviar(destinatario: String, mensaje: String): void
    }
  }
}

package "DTO" #F0F0F0 {
  class PartidoDTO {
    - id: String
    - nombreDeporte: String
    - cantidadJugadoresAnotados: int
    - cantidadJugadoresRequeridos: int
    - estado: String
    - ubicacion: UbicacionDTO
    - duracion: int
    - fechaHora: String

    + PartidoDTO()
    + PartidoDTO(id: String, nombreDeporte: String, cantidadJugadoresAnotados: int, cantidadJugadoresRequeridos: int, estado: String, ubicacion: UbicacionDTO, duracion: int, fechaHora: String)
    + PartidoDTO(id: String, deporte: Deporte, cantidadJugadoresRequeridos: int, duracion: int, ubicacion: UbicacionDTO, fechaHora: String)
    + getters/setters para todos los atributos
  }

  class UsuarioDTO {
    - nombreUsuario: String
    - correo: String
    - password: String
    - ubicacion: UbicacionDTO
    - deportes: List<UsuarioDeporteDTO>
    - historial: List<PartidoDTO>
    - sesion: boolean
    - cantidadPartidosJugados: int

    + UsuarioDTO()
    + UsuarioDTO(nombreUsuario: String, correo: String, password: String, ubicacion: UbicacionDTO, deportes: List<UsuarioDeporteDTO>, historial: List<PartidoDTO>, sesion: boolean, cantidadPartidosJugados: int)
    + getters/setters para todos los atributos
  }

  class DeporteDTO {
    - id: int
    - nombre: String
    - jugadoresMinimos: int
    - jugadoresMaximos: int

    + getters/setters para todos los atributos
  }

  class UbicacionDTO {
    - latitud: double
    - longitud: double
    - direccion: String
    - ciudad: String

    + UbicacionDTO()
    + UbicacionDTO(latitud: double, longitud: double, direccion: String, ciudad: String)
    + getters/setters para todos los atributos
  }

  class UsuarioDeporteDTO {
    - nivel: Nivel
    - deporte: DeporteDTO

    + UsuarioDeporteDTO()
    + UsuarioDeporteDTO(nivel: Nivel, deporte: DeporteDTO)
    + getters/setters para todos los atributos
  }
}

' RELACIONES!!

Partido o-- EstadoPartido
Partido o-- EstrategiaEmparejamiento

Partido "*" -- "1" Deporte
Partido "*" -- "1" Ubicacion
Partido "*" -- "*" Usuario : jugadoresAnotados
Partido "*" -- "1" Usuario : organizador
Usuario "1" -- "*" UsuarioDeporte
UsuarioDeporte "*" -- "1" Deporte
Usuario "1" -- "1" Ubicacion
Partido "1" -- "*" Notificador : observadores
Notificador "*" -- "1" Usuario : notifica a >

Notificador o-- INotificacionAdapter
FirebaseAdapter *-- Firebase
MailAdapter *-- Mail

PartidoController o-- Partido
PartidoController o-- Notificador
PartidoController o-- Deporte
UsuarioController o-- Usuario

PartidoController ..> PartidoDTO : produce
UsuarioController ..> UsuarioDTO : produce
Partido ..> PartidoDTO : convierte a
Usuario ..> UsuarioDTO : convierte a
Ubicacion ..> UbicacionDTO : convierte a
PartidoDTO ..> UbicacionDTO : contiene
PartidoDTO ..> DeporteDTO : referencia
PartidoDTO ..> UsuarioDTO : referencia
UsuarioDTO ..> UbicacionDTO : contiene
UsuarioDTO ..> UsuarioDeporteDTO : contiene
UsuarioDTO ..> PartidoDTO : contiene historial
UsuarioDeporteDTO ..> DeporteDTO : contiene

Partido ..> Nivel : nivelMinimo, nivelMaximo
UsuarioDeporte *-- Nivel : nivel
UsuarioDeporteDTO *-- Nivel : nivel

' Posicionamiento y leyenda
legend top
  <b>Sistema de Partidos Deportivos
  ==
  <color:red>■</color> State Pattern: Maneja los diferentes estados de un partido
  <color:blue>■</color> Strategy Pattern: Proporciona diferentes algoritmos para emparejar jugadores
  <color:green>■</color> Adapter Pattern: Adapta servicios externos (Firebase, Mail) a una interfaz común
  <color:purple>■</color> Observer Pattern: Notifica a los usuarios sobre cambios en los partidos
endlegend

@enduml